--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 # on alpine, copy to /etc/nginx/nginx.conf
-user                            root;
+user                            nginx;
 worker_processes                auto;
 
 error_log                       /var/log/nginx/error.log warn;
